--- a/src/app/modules/user/register/register.component.css
+++ b/src/app/modules/user/register/register.component.css
@@ -1,4 +1,9 @@
-
+.back{
+    background-image:url("https://images.pexels.com/photos/5673488/pexels-photo-5673488.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+    background-size: cover;
+    height:100vh;
+    flex-wrap: wrap;
+}
 .c1{
     height:100vh;
     width:600px;
@@ -51,4 +56,7 @@ margin-bottom:0px;
 
 nz-form-label{
   margin-bottom:-10px;
+}
+.address{
+    width:460px;
 }
