--- a/src/app/modules/user/register/register.component.html
+++ b/src/app/modules/user/register/register.component.html
@@ -1,3 +1,4 @@
+<nz-layout class="back">
 <ng-container>
     <div class="ml-auto c1 shadow-lg">
        <div style="border: 1px solid #d9d9d9;border-radius: 6px; padding:12px;" class="shadow box">
@@ -63,7 +64,7 @@
   
               <nz-form-item nz-col nzSpan="24">
                 <nz-form-label style="margin-bottom:none;">Address</nz-form-label> 
-                <nz-form-control nzErrorTip="Please input your username!" formControlName="">
+                <nz-form-control nzErrorTip="Please input your username!" formControlName="" class="address">
                     <nz-input-group nzPrefixIcon="home">
                         <input type="text" nz-input formControlName="address" placeholder="Address"/>
                     </nz-input-group>
@@ -100,5 +101,6 @@
         </div>
     </div>
   </ng-container>
+</nz-layout>
   
   
