--- a/Frontend/src/app/layouts/home/home.component.html
+++ b/Frontend/src/app/layouts/home/home.component.html
@@ -1,8 +1,17 @@
 <nz-layout>
   
-  <nz-header>
-    <div class="logo">My website</div>
+  
+    <nz-header class="d-flex flex-row justify-content-between">
+      <div class="d-flex flex-row">
+          <img src="https://www.siggraph.org/wp-content/uploads/2022/04/org.flat_.logo_.400_0.jpg" class="img"/>
+          <p class="para">Approval Management System</p>
+      </div>
+      <div>
+        <button nz-button nzType="primary">LogOut</button>
+      </div>
+      
   </nz-header>
+  
 
   <nz-layout>
 
