--- a/Frontend/src/app/layouts/user/login/login.component.html
+++ b/Frontend/src/app/layouts/user/login/login.component.html
@@ -3,13 +3,13 @@
   <nz-content>
     <div class="ml-auto c1 shadow-lg">
 
-      <div style="border: 1px solid #d9d9d9;border-radius: 6px; padding:12px;" class="shadow box">
+      <div style="border: 2px solid #d9d9d9;border-radius: 6px; padding:12px;" class="shadow box">
 
         <h1 class="text-center">Login</h1>
         <form nz-form [formGroup]="validateForm" class="inputs" (ngSubmit)="onSubmit()">
           <nz-form-item>
             <nz-form-control nzErrorTip="Please enter valid email">
-              <nz-form-label>Email/Username</nz-form-label>
+              <nz-form-label nzRequired>Email/Username</nz-form-label>
               <nz-input-group nzPrefixIcon="user">
                 <input type="text" nz-input formControlName="email" placeholder="Email/Username" />
               </nz-input-group>
@@ -18,9 +18,9 @@
 
           <nz-form-item>
             <nz-form-control nzErrorTip="Please enter valid password">
-              <nz-form-label>Password</nz-form-label>
+              <nz-form-label nzRequired>Password</nz-form-label>
               <nz-input-group nzPrefixIcon="lock">
-                <input type="password" nz-input formControlName="password" placeholder="Password" />
+                <input type="password" nz-input formControlName="password" placeholder="Password"  />
               </nz-input-group>
             </nz-form-control>
           </nz-form-item>
@@ -32,13 +32,15 @@
                 <span>Remember me</span>
               </label>
             </div>
-            <div nz-col [nzSpan]="12">
-              <a class="login-form-forgot text-primary" (click)="forgot()">Forgot password</a>
-            </div>
+            
             <button nz-button class="login-form-margin login-form-button" [nzType]="'primary'" nz-col [nzSpan]="24"
               type="submit">Log in</button>
-            Or &nbsp;
-            <a (click)="signup()" class="text-primary">register now!</a>
+
+            
+              <a (click)="signup()" class="text-primary" nz-col [nzSpan]="12">register now!</a>
+              <a class="login-form-forgot text-primary" (click)="forgot()" nz-col [nzSpan]="8" nzOffset="4">Forgot password</a>
+            
+            
           </div>
 
         </form>
