--- a/Frontend/src/app/modules/department/components/department-list/department-list.component.css
+++ b/Frontend/src/app/modules/department/components/department-list/department-list.component.css
@@ -1,7 +1,8 @@
 nz-content {
   background: #fff;
   padding: 24px;
-  min-height: 280px;
+  min-height: 100vh;
+
 }
 nz-header {
   background: none;
