--- a/Frontend/src/app/modules/department/components/department-list/department-list.component.html
+++ b/Frontend/src/app/modules/department/components/department-list/department-list.component.html
@@ -189,7 +189,8 @@
       <button nz-button style="margin-right: 8px" (click)="close()">
         Cancel
       </button>
-      <button nz-button nzType="primary" (click)="submit()">Submit</button>
+      <button nz-button *ngIf="submit" nzType="primary" (click)="onSubmit()">Submit</button>
+      <button nz-button *ngIf="!submit" nzType="primary" (click)="update()">Update</button>
     </div>
   </ng-template>
 </nz-drawer>
